// Lists all containers.
//
// ### Request
//
// Empty.
//
// ### Response
//
// * `handles`: List of container handles.
//
// ### Errors
//
// None.
//
// ### Definition
//

package IronFoundry.Warden.Protocol;
import "info.proto";


message ListRequest {
}

message ListResponse {
  repeated string handles = 1;
}
