// Echoes a message.
//
// ### Request
//
// * `message`: Message to echo.
//
// ### Response
//
// * `message`: Echoed message.
//
// ### Errors
//
// None.
//
// ### Definition
//

package IronFoundry.WardenProtocol;

message EchoRequest {
  required string message = 1;
}

message EchoResponse {
  required string message = 1;
}
