// Pings.
//
// ### Request
//
// Empty.
//
// ### Response
//
// Empty.
//
// ### Errors
//
// None.
//
// ### Definition
//

package IronFoundry.WardenProtocol;

message PingRequest {
}

message PingResponse {
}
